project-43-kubernetes-network-security/manifests/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: project-38-default-deny-ingress
  namespace: project-38
spec:
  podSelector: {}
  policyTypes:
    - Ingress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: project-38-default-deny-egress
  namespace: project-38
spec:
  podSelector: {}
  policyTypes:
    - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: project-38-allow-dns
  namespace: project-38
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: project-38
      app.kubernetes.io/instance: project-38
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: project-38-allow-labeled-client
  namespace: project-38
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: project-38
      app.kubernetes.io/instance: project-38
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              project-43-client: "allowed"
      ports:
        - protocol: TCP
          port: 5000
